<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_chatroom_fragmentcontainer"
    >

    <RelativeLayout
        android:id="@+id/layout_chatroom_roominfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_chatroom_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/imageButton_chatroom_back"
            android:text="@string/text_fragment_chatroom_name"
            android:textColor="?colorPrimary"
            android:textSize="20dp"

            />


        <ImageButton
            android:id="@+id/imageButton_chatroom_back"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?colorBackgroundFloating"
            app:srcCompat="@drawable/buttonimage_chatroom_back_32dp" />

    </RelativeLayout>
    <!--  Used for loading new messages  -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="338dp"
        android:layout_height="561dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/textview_chatroom_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_chatroom_roominfo">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_chatroom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/textview_chatroom_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_chatroom_roominfo" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/textview_chatroom_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/view_chatroom"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_chatroom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?colorBackgroundFloating"
        app:layout_constraintBottom_toTopOf="@+id/layout_chatroom_chatbox" />

    <RelativeLayout
        android:id="@+id/layout_chatroom_chatbox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--        https://sendbird.com/developer/tutorials/android-chat-tutorial-building-a-messaging-ui-->
        <EditText
            android:id="@+id/edittext_chatroom_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@+id/button_chatroom_send"
            android:background="?colorBackgroundFloating"
            android:hint="@string/hint_fragment_chatroom_textingfiled"
            android:inputType="text"
            android:maxLines="6"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button_chatroom_send"
            android:layout_width="84dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:text="@string/buttonname_fragment_chatroom_send"
            android:textColor="?colorPrimary" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>